--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,17 +29,16 @@
         app:srcCompat="@drawable/tajmahal" />
 
     <ProgressBar
+        android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="284dp"
+        android:layout_height="33dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="25dp"
         android:indeterminate="false"
         android:max="5"
         android:minHeight="50dp"
         android:progress="0"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -101,5 +100,16 @@
             android:text="Golden Temple"
             android:textSize="20sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/question_attempted"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:gravity="center"
+        android:text="0/5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/progressBar"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
